# vtool_character_v2

./: .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
examples/: character_manager.py  chat_with_character.py
openspec/: config.yaml
src/vtool_character_v2/: __init__.py  exceptions.py
src/vtool_character_v2/character/: __init__.py  base.py  episodes.py  persistence.py  psychology_init.py
src/vtool_character_v2/compiler/: __init__.py  compiler.py  dna_layers.py  yaml_loader.py
src/vtool_character_v2/config/prompts/: 10_never_do.md  11_state.md  12_definitions.md  13_relationship.md  14_few_shot.md  15_scenario.md  16_response_style.md  1_identity.md  2_traits.md  3_motivations.md  4_flaws.md  5_speech.md  6_inner_conflict.md  7_emotional_triggers.md  8_speech_patterns.md  9_core_rules.md
src/vtool_character_v2/db/: __init__.py  character_memory.py  chat_memory.py  chroma_store.py
src/vtool_character_v2/psychology/: __init__.py  belief_manager.py  dna_adapter.py  drift_detector.py  emotional_dynamics.py  runtime_manager.py  synthesizer.py
src/vtool_character_v2/soul/: __init__.py  accessor.py  compression.py  events.py  initialization.py  llm_adapter.py  reflection.py  simulation.py  soul_generator.py
src/vtool_character_v2/types/: __init__.py  character.py  config.py  psychology.py
tests/: conftest.py  test_integration.py
